@@ -1,3 +1,7 @@
+2013-8-21 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 1.6-08
+   * clean up DESCRIPTION and NAMESPACE
+
 2013-7-12 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 1.6-07
    * made various change to adjust the new lme4
